--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,52 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import com.android.build.api.dsl.CommonExtension
+
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+}
+
+
+ext {
+    minSdkVersion = 23
+    compileSdkVersion = 33
+    targetSdkVersion = 33
+}
+
+
+def setupDefaultModuleConfig(CommonExtension it) {
+    it.compileSdkVersion rootProject.ext.compileSdkVersion
+
+    it.defaultConfig {
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
+    }
+
+    it.buildTypes {
+        debug {
+            minifyEnabled true
+            debuggable true
+        }
+    }
+
+    it.compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    it.kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11.toString()
+        freeCompilerArgs = ['-Xjvm-default=all']
+    }
+
+    it.testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+        unitTests.returnDefaultValues = true
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
