--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+
+    implementation "com.google.code.gson:gson:2.9.0"
 }
