--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.40'
 
     implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.11'
 }
