Refactoring of ui directory

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ def setupDefaultModuleConfig(CommonExtension it) {
 
     it.buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             debuggable true
         }
     }
