--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ def setupDefaultModuleConfig(CommonExtension it) {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     it.buildTypes {
