--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
     implementation "androidx.fragment:fragment-ktx:1.6.0"
+    implementation "me.saket.cascade:cascade:1.3.0"
 
     def room_version = "2.5.1"
     implementation "androidx.room:room-runtime:$room_version"
