--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,30 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+setupDefaultModuleConfig(android)
+
 android {
     namespace 'dev.liinahamari.core'
-    compileSdk 34
-
-    defaultConfig {
-        minSdk 24
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
-    }
 }
 
 dependencies {
