--- a/feature/db_backup/sample/build.gradle
+++ b/feature/db_backup/sample/build.gradle
@@ -4,22 +4,22 @@ plugins {
     id 'kotlin-kapt'
 }
 
+setupDefaultModuleConfig(android)
+
 android {
     namespace 'dev.liinahamari.db_backup.sample'
 }
 
-setupDefaultModuleConfig(android)
-
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation "androidx.activity:activity-ktx:1.7.2"
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation "androidx.activity:activity-ktx:1.8.0"
+    implementation 'com.google.android.material:material:1.10.0'
     implementation project(":feature:db_backup")
 
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
-    implementation "androidx.room:room-rxjava3:2.6.0-alpha01"
+    implementation "androidx.room:room-rxjava3:2.6.0"
 
-    def room_version = "2.5.1"
+    def room_version = "2.6.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
