--- a/feature/entity-list/build.gradle
+++ b/feature/entity-list/build.gradle
@@ -3,37 +3,13 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+setupDefaultModuleConfig(android)
+
 android {
     namespace 'dev.liinahamari.entity_list'
-    compileSdk 34
-
-    defaultConfig {
-        minSdk 24
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
-    }
 }
 
 dependencies {
-//    implementation 'androidx.core:core-ktx:1.12.0'
-//    implementation 'androidx.appcompat:appcompat:1.6.1'
-//    implementation 'com.google.android.material:material:1.10.0'
-
     api project(":feature:entity-list:api")
     implementation project(":feature:entity-list:impl")
 }
