--- a/feature/entity-list/list-ui/build.gradle
+++ b/feature/entity-list/list-ui/build.gradle
@@ -5,32 +5,12 @@ plugins {
     id 'kotlin-parcelize'
 }
 
+setupDefaultModuleConfig(android)
+
 android {
     namespace 'dev.liinahamari.list_ui'
-    compileSdk 34
     buildFeatures {
         viewBinding true
-    }
-
-    defaultConfig {
-        minSdk 24
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
     }
 }
 
@@ -51,14 +31,14 @@ dependencies {
     implementation "me.saket.cascade:cascade:1.3.0"
 
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
-    
+
     def materialDialogsVersion = '3.3.0'
     implementation "com.afollestad.material-dialogs:core:$materialDialogsVersion"
     implementation "com.afollestad.material-dialogs:input:$materialDialogsVersion"
 
     implementation project(":core")
     implementation project(":feature:entity-list")
-    def room_version = "2.5.2"
+    def room_version = "2.5.1"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
