--- a/feature/entity-list/sample/build.gradle
+++ b/feature/entity-list/sample/build.gradle
@@ -3,38 +3,14 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+setupDefaultModuleConfig(android)
+
 android {
-    namespace 'com.example.sample'
-    compileSdk 34
-
-    defaultConfig {
-        applicationId "com.example.sample"
-        minSdk 24
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
-    }
+    namespace 'dev.liinahamari.entity_list.sample'
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     testImplementation 'junit:junit:4.13.2'
