--- a/feature/movies_suggestions/sample/build.gradle
+++ b/feature/movies_suggestions/sample/build.gradle
@@ -11,7 +11,6 @@ android {
 }
 
 dependencies {
-    implementation "androidx.paging:paging-rxjava3:3.2.1"
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
@@ -21,7 +20,9 @@ dependencies {
     implementation project(path: ':feature:movies_suggestions')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+
     implementation project(":feature:movies_suggestions")
+    implementation project(":core")
 
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
