--- a/feature/suggestions/sample/build.gradle
+++ b/feature/suggestions/sample/build.gradle
@@ -8,6 +8,9 @@ setupDefaultModuleConfig(android)
 
 android {
     namespace 'dev.liinahamari.suggestions.sample'
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -16,6 +19,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
     implementation project(path: ':feature:suggestions')
     testImplementation 'junit:junit:4.13.2'
@@ -26,6 +30,9 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
+    implementation "com.github.bumptech.glide:glide:4.15.1"
 
     def room_version = "2.5.1"
     implementation "androidx.room:room-runtime:$room_version"
