--- a/feature/suggestions/api/build.gradle
+++ b/feature/suggestions/api/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     testImplementation "androidx.paging:paging-common-ktx:3.2.1"
     implementation "androidx.paging:paging-rxjava3:3.2.1"
     implementation "com.google.code.gson:gson:2.10"
+    api project(path: ':feature:entity-list:api')
 }
