--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,6 +7,9 @@ setupDefaultModuleConfig(android)
 
 android {
     namespace 'dev.liinahamari.core'
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
