Add shimming effect while loading in Movie Suggestions

--- a/feature/suggestions/suggestions-ui/build.gradle
+++ b/feature/suggestions/suggestions-ui/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
     implementation "androidx.fragment:fragment-ktx:1.6.2"
+    implementation "com.github.skydoves:androidveil:1.1.3"
 
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.jakewharton.rxbinding4:rxbinding-core:4.0.0'
