--- a/feature/entity-list/list-ui/build.gradle
+++ b/feature/entity-list/list-ui/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava3:$room_version"
 
+    implementation 'com.squareup:seismic:1.0.2'
+    implementation project(":feature:summary:summary-ui")
 }
 
