--- a/feature/entity-list/list-ui/src/main/AndroidManifest.xml
+++ b/feature/entity-list/list-ui/src/main/AndroidManifest.xml
@@ -11,5 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Highlights"
         tools:targetApi="31">
+
+        <activity android:name=".SummaryActivity"
+            android:theme="@style/Theme.Material3.Dark.NoActionBar"
+            android:exported="false"/>
     </application>
 </manifest>
