Add chart depicting ratio between entity types

--- a/feature/summary/summary-ui/build.gradle
+++ b/feature/summary/summary-ui/build.gradle
@@ -34,4 +34,6 @@ dependencies {
 
     implementation project(':core')
     implementation project(':feature:entity-list')
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
