--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://www.jitpack.io' }
     }
 }
+
 rootProject.name = "Highlights"
 include ':app'
 include ':core'
