--- a/feature/suggestions/sample/build.gradle
+++ b/feature/suggestions/sample/build.gradle
@@ -17,4 +17,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation project(path: ':feature:suggestions:suggestions-ui')
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
