--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.application' version '8.1.2' apply false
-    id 'com.android.library' version '8.1.2' apply false
+    id 'com.android.application' version '8.2.2' apply false
+    id 'com.android.library' version '8.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
 }
@@ -10,25 +10,25 @@ ext {
     compileSdkVersion = 34
     targetSdkVersion = 34
 
-    rxJavaVersion = '3.0.6'
-    rxKotlinVersion = '3.0.0'
+    //libraries' versions
+    rxJavaVersion = '3.1.8'
+    rxKotlinVersion = '3.0.1'
     rxAndroidVersion = '3.0.2'
     retrofitVersion = '2.9.0'
     okhttp3Version = '5.0.0-alpha.2'
-
     coreKtxVersion = '1.12.0'
     activityKtxVersion = '1.8.0'
-    fragmentKtxVersion = '1.6.1'
+    fragmentKtxVersion = '1.6.2'
     appcompatKtxVersion = '1.6.1'
     constraintLayoutVersion = '2.1.4'
-    lifecycleVersion = '2.6.2'
+    lifecycleVersion = '2.7.0'
     roomVersion = '2.5.1'
     viewPager2Version = '1.0.0'
     materialVersion = '1.11.0'
     viewBindingPropertyDelegateVersion = '1.5.3'
-    gsonVersion = '2.10'
+    gsonVersion = '2.10.1'
     anrWatchDogVersion = '1.4.0'
-    leakCanaryVersion = '2.11'
+    leakCanaryVersion = '2.13'
     daggerVersion = '2.42'
     materialDialogsVersion = '3.3.0'
     expandableLayoutVersion = '2.9.2'
@@ -38,10 +38,10 @@ ext {
     androidVeilVersion = '1.1.3'
     chartVersion = 'v3.1.0'
     kotlinMetadataVersion = '0.5.0'
-
-    glideVersion = '4.15.1'
+    securityCryptoVersion = '1.1.0-alpha06'
+    cascadeVersion = '1.3.0'
+    glideVersion = '4.16.0'
     keyboardVisibilityVersion = '2.3.0'//todo
-
 
     junitVersion = '4.13.2'
 }
