--- a/feature/entity-list/list-ui/build.gradle
+++ b/feature/entity-list/list-ui/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-    implementation "me.saket.cascade:cascade:1.3.0"
+    implementation "me.saket.cascade:cascade:$cascadeVersion"
 
     implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
 
