--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,13 +13,13 @@ android {
 }
 
 dependencies {
-    implementation "androidx.fragment:fragment-ktx:1.6.1"
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
+    implementation "androidx.viewpager2:viewpager2:$viewPager2Version"
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
 
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava3:rxandroid:$rxAndroidVersion"
 
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation "com.google.android.material:material:$materialVersion"
 }
