--- a/feature/entity-list/api/build.gradle
+++ b/feature/entity-list/api/build.gradle
@@ -11,5 +11,5 @@ android {
 }
 
 dependencies {
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
 }
