--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,42 @@ ext {
     minSdkVersion = 24
     compileSdkVersion = 34
     targetSdkVersion = 34
-}
 
+    rxJavaVersion = '3.0.6'
+    rxKotlinVersion = '3.0.0'
+    rxAndroidVersion = '3.0.2'
+    retrofitVersion = '2.9.0'
+    okhttp3Version = '5.0.0-alpha.2'
+
+    coreKtxVersion = '1.12.0'
+    activityKtxVersion = '1.8.0'
+    fragmentKtxVersion = '1.6.1'
+    appcompatKtxVersion = '1.6.1'
+    constraintLayoutVersion = '2.1.4'
+    lifecycleVersion = '2.6.2'
+    roomVersion = '2.5.1'
+    viewPager2Version = '1.0.0'
+    materialVersion = '1.11.0'
+    viewBindingPropertyDelegateVersion = '1.5.3'
+    gsonVersion = '2.10'
+    anrWatchDogVersion = '1.4.0'
+    leakCanaryVersion = '2.11'
+    daggerVersion = '2.42'
+    materialDialogsVersion = '3.3.0'
+    expandableLayoutVersion = '2.9.2'
+    seismicVersion = '1.0.2'
+    pagingVersion = '3.2.1'
+    rxBindingVersion = '4.0.0'
+    androidVeilVersion = '1.1.3'
+    chartVersion = 'v3.1.0'
+    kotlinMetadataVersion = '0.5.0'
+
+    glideVersion = '4.15.1'
+    keyboardVisibilityVersion = '2.3.0'//todo
+
+
+    junitVersion = '4.13.2'
+}
 
 def setupDefaultModuleConfig(android) {
     android.compileSdkVersion rootProject.ext.compileSdkVersion
