--- a/feature/entity-list/list-ui/build.gradle
+++ b/feature/entity-list/list-ui/build.gradle
@@ -16,25 +16,23 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
-    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+    implementation "androidx.core:core-ktx:$coreKtxVersion"
+    implementation "androidx.appcompat:appcompat:$appcompatKtxVersion"
+    implementation "com.google.android.material:material:$materialVersion"
+    testImplementation "junit:junit:$junitVersion"
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$viewBindingPropertyDelegateVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
 
-    implementation 'com.google.dagger:dagger:2.42'
-    kapt 'com.google.dagger:dagger-compiler:2.42'
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
-    implementation "com.github.bumptech.glide:glide:4.15.1"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "me.saket.cascade:cascade:1.3.0"
 
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
 
-    implementation "com.google.android.material:material:1.11.0"
+    implementation "com.google.android.material:material:$materialVersion"
 
-    def materialDialogsVersion = '3.3.0'
     implementation "com.afollestad.material-dialogs:core:$materialDialogsVersion"
     implementation "com.afollestad.material-dialogs:input:$materialDialogsVersion"
 
@@ -42,15 +40,13 @@ dependencies {
     implementation project(":feature:entity-list")
     implementation project(":feature:suggestions:suggestions-ui")
 
-    def room_version = "2.5.1"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava3:$room_version"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-rxjava3:$roomVersion"
 
-    implementation 'com.squareup:seismic:1.0.2'
+    implementation "com.squareup:seismic:$seismicVersion"
     implementation project(":feature:summary:summary-ui")
 
-    implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
+    implementation "com.github.cachapa:ExpandableLayout:$expandableLayoutVersion"
 }
-
