--- a/feature/suggestions/suggestions-ui/build.gradle
+++ b/feature/suggestions/suggestions-ui/build.gradle
@@ -13,20 +13,20 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation "com.github.bumptech.glide:glide:4.15.1"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation "com.google.android.material:material:$materialVersion"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
 
     api project(":feature:entity-list:api")
     api project(path: ':feature:suggestions:api')
     implementation project(path: ':core')
     implementation project(path: ':feature:suggestions')
 
-    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
-    implementation "androidx.fragment:fragment-ktx:1.6.2"
-    implementation "com.github.skydoves:androidveil:1.1.3"
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$viewBindingPropertyDelegateVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
+    implementation "com.github.skydoves:androidveil:$androidVeilVersion"
 
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
-    implementation 'com.jakewharton.rxbinding4:rxbinding-core:4.0.0'
-    implementation 'com.jakewharton.rxbinding4:rxbinding-appcompat:4.0.0'
+    implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
+    implementation "com.jakewharton.rxbinding4:rxbinding-core:$rxBindingVersion"
+    implementation "com.jakewharton.rxbinding4:rxbinding-appcompat:$rxBindingVersion"
 }
