Add Google Books API SearchBookApi.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ plugins {
 
 android {
     namespace 'dev.liinahamari.highlights'
+
+    defaultConfig {
+        applicationId = "dev.liinahamari.highlights"
+    }
     buildFeatures {
         viewBinding true
     }
