--- a/feature/suggestions/impl/build.gradle
+++ b/feature/suggestions/impl/build.gradle
@@ -14,6 +14,7 @@ android {
     defaultConfig {
         buildConfigField("String", "TMDB_API_KEY", apikeyProperties['TMDB_API_KEY'])
         buildConfigField("String", "RAWG_IO_API_KEY", apikeyProperties['RAWG_IO_API_KEY'])
+        buildConfigField("String", "GOOGLE_BOOKS_API_KEY", apikeyProperties['GOOGLE_BOOKS_API_KEY'])
     }
 }
 
