Prevent multiple launches of SummaryActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:theme="@style/Theme.Highlights"
         tools:targetApi="31">
         <activity
-            android:name="dev.liinahamari.list_ui.MainActivity"
+            android:name="dev.liinahamari.list_ui.activities.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Material3.Dark.NoActionBar">
             <intent-filter>
