Feature: settings fragment with option to disable suggestions

--- a/feature/entity-list/list-ui/build.gradle
+++ b/feature/entity-list/list-ui/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation project(":feature:summary:summary-ui")
 
     implementation "com.github.cachapa:ExpandableLayout:$expandableLayoutVersion"
+    implementation "androidx.preference:preference-ktx:$preferencesVersion"
 }
