--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ ext {
     cascadeVersion = '1.3.0'
     glideVersion = '4.16.0'
     keyboardVisibilityVersion = '2.3.0'//todo
+    preferencesVersion = '1.2.1'
 
     junitVersion = '4.13.2'
 }
