--- a/feature/entity-list/impl/build.gradle
+++ b/feature/entity-list/impl/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "androidx.preference:preference-ktx:$preferencesVersion"
 
     api project(path: ':feature:entity-list:api')
     implementation project(path: ':core')
