#5 Migrate no new Chart API (Summary)

--- a/feature/summary/summary-ui/build.gradle
+++ b/feature/summary/summary-ui/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     implementation project(':core')
     implementation project(':feature:entity-list')
 
-    implementation "com.github.PhilJay:MPAndroidChart:$chartVersion"
+    implementation "com.github.AnyChart:AnyChart-Android:$chartVersion"
 }
