--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ ext {
     pagingVersion = '3.2.1'
     rxBindingVersion = '4.0.0'
     androidVeilVersion = '1.1.3'
-    chartVersion = 'v3.1.0'
+    chartVersion = '1.1.5'
     kotlinMetadataVersion = '0.5.0'
     securityCryptoVersion = '1.1.0-alpha06'
     cascadeVersion = '1.3.0'
