#14 Migrate from RxJava to coroutines in summary-ui module

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ ext {
     targetSdkVersion = 34
 
     //libraries' versions
+    coroutinesVersion = '1.7.3'
     rxJavaVersion = '3.1.8'
     rxKotlinVersion = '3.0.1'
     rxAndroidVersion = '3.0.2'
@@ -23,6 +24,7 @@ ext {
     constraintLayoutVersion = '2.1.4'
     lifecycleVersion = '2.8.1'
     roomVersion = '2.5.1'
+    roomKtxVersion = '2.6.1'
     viewPager2Version = '1.1.0'
     materialVersion = '1.12.0'
     viewBindingPropertyDelegateVersion = '1.5.3'
@@ -57,12 +59,6 @@ def setupDefaultModuleConfig(android) {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
-            }
-        }
     }
 
     android.buildTypes {
