--- a/feature/summary/summary-ui/build.gradle
+++ b/feature/summary/summary-ui/build.gradle
@@ -15,6 +15,9 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+
     implementation "androidx.core:core-ktx:$coreKtxVersion"
     implementation "androidx.appcompat:appcompat:$appcompatKtxVersion"
     implementation "com.google.android.material:material:$materialVersion"
@@ -22,8 +25,6 @@ dependencies {
 
     testImplementation "junit:junit:$junitVersion"
 
-    implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
-    implementation "io.reactivex.rxjava3:rxandroid:$rxAndroidVersion"
     implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$viewBindingPropertyDelegateVersion"
 
     implementation "com.google.dagger:dagger:$daggerVersion"
