#13 Upload crash-screen-interceptor library to it's own repo and add as a dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
 
     implementation project(":feature:entity-list:list-ui")
+
+    debugImplementation "com.github.liinahamari:CrashScreenInterceptor:$crashInterceptor"
 }
