--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'com.android.application' version '8.4.1' apply false
-    id 'com.android.library' version '8.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    id 'com.android.application' version '8.4.2' apply false
+    id 'com.android.library' version '8.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
+    id 'org.jetbrains.kotlin.jvm' version '2.0.0' apply false
 }
 
 ext {
@@ -46,6 +46,7 @@ ext {
     keyboardVisibilityVersion = '2.3.0'//todo
     preferencesVersion = '1.2.1'
     recyclerviewSelectionVersion = '1.1.0'
+    crashInterceptor = '1.0.0'
 
     junitVersion = '4.13.2'
 }
