Suggestions item: split render of text information (add progress spinner in TextInputLayout while waiting for response) and rendering thumbnail of entity (VeilLayout)

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ ext {
     recyclerviewSelectionVersion = '1.1.0'
     crashInterceptor = '1.0.0'
     annotationsVersion = '1.9.1'
+    swipeRefreshlayoutVersion = '1.1.0'
 
     junitVersion = '4.13.2'
 }
